--- a/host/package.json
+++ b/host/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "@types/node": "^15.12.2",
-    "typescript": "^4.3.2"
-  }
+    "typescript": "^4.3.2",
+    "@types/ace": "^0.0.46"
+  },
+  "type": "module"
 }
